@@ -7,7 +7,7 @@ Rgas=286.0;
 rhoref=1;
 aref=300;
 
-Mx=20.0;
+Mx=4.0;
 My=0.0;
 P=10200;
 T=300;
@@ -225,7 +225,7 @@ Disc(
     EIGENVALCOND=EIGENVALCOND_PARENT; 
     POSFILTER=POSFILTER_PARENT;
     POSFILTER_numiter=4;
-    FACEINTEG=FACEINTEG_CENTRAL3;
+    FACEINTEG=FACEINTEG_CENTRAL1;
   );
   MUSCLplus(
     FLUX=FLUX_FDSplusFilter;
