@@ -104,8 +104,8 @@ Init(
 
 Disc(
   NavierStokesPerfect(
-    zetaA1=0.0e0;    {conditions the eigenvalue of the A jacobian}
-    zetaA2=0.5e0;     {conditions eigenvalues so they don't go out of bound; set to 0.1-0.5}
+    zetaA1=0.02e0;    {conditions the eigenvalue of the A jacobian}
+    zetaA2=0.02e0;     {conditions eigenvalues so they don't go out of bound; set to 0.1-0.5}
   );
   FDSplus(
     AVERAGING=AVERAGING_ARITH;
