@@ -192,7 +192,7 @@ Init(
 
 Disc(
   NavierStokes(
-    zetaA1=0.02e0;    {conditions the eigenvalue of the A jacobian}
+    zetaA1=0.08e0;    {conditions the eigenvalue of the A jacobian}
     zetaA2=0.02e0;     {conditions eigenvalues so they don't go out of bound; set to 0.1-0.5}
   );
   MUSCL(
