@@ -1568,49 +1568,63 @@ void condition_Lambda_plus_minus_Parent_firstpass(np_t *np, gl_t *gl, long lp0, 
 }
 
 
-
-
-
 void condition_Lambda_plus_minus_Parent(np_t *np, gl_t *gl, long lp0, long theta, jacvars_t jacvarsp0, jacvars_t jacvarsp1, metrics_t metrics,  sqmat_t Lambdaplus, sqmat_t Lambdaminus){
   long flux;
-  double zetaA1,zetaA2,Vmin,Vmax,Vadd;
-  flux_t Vp0,Vp1,LUstarp0,LUstarp1;
+  double Vadd1,Vadd2,Vadd,sum;
+  flux_t LUstarp0,LUstarp1;
 
-  condition_Lambda_plus_minus_Parent_firstpass(np, gl, lp0, theta, jacvarsp0, jacvarsp1, metrics,  Lambdaplus, Lambdaminus);
+  condition_Lambda_plus_minus_Pascal(np, gl, lp0, theta, jacvarsp0, jacvarsp1, metrics,  Lambdaplus, Lambdaminus);
 
-
-  zetaA1=0.0; //set zetaA1=0 for minimum dissipation to yield positivity-preserving scheme
-              //set zetaA1=0.5 for best results
-  zetaA2=0.0;
+  /* make sure the flux is positivity-preserving in multiple dimensions by conditioning the eigenvalues */
   find_LUstar_from_jacvars(jacvarsp1, metrics, LUstarp1);
   find_LUstar_from_jacvars(jacvarsp0, metrics, LUstarp0);
-  for (flux=0; flux<nf; flux++){
-    Vp0[flux]=fabs(LUstarp0[flux]*Lambdaplus[flux][flux]);
-    Vp1[flux]=fabs(LUstarp1[flux]*Lambdaminus[flux][flux]);
-  }
-  Vmin=1.0e99;
-  Vmax=-1.0e99;
-  for (flux=0; flux<nf; flux++){
-    if (flux!=fluxet && flux!=fluxet-1) {
-      Vmin=min(Vmin,min(Vp1[flux],Vp0[flux]));
-      Vmax=max(Vmax,max(Vp1[flux],Vp0[flux]));
-    }
-  }
 
-  Vadd=max(0.0,(Vmax-Vmin)-(1.0-zetaA1)*min(Vp0[fluxet]+Vp0[fluxet-1],Vp1[fluxet]+Vp1[fluxet-1]));
+  sum=0.0;
+  for (flux=0; flux<fluxet-2; flux++) sum+=Lambdaplus[flux][flux]*LUstarp0[flux];
+  Vadd1=max(0.0,fabs(sum-Lambdaplus[fluxet-2][fluxet-2]*LUstarp0[fluxet-2])-(Lambdaplus[fluxet][fluxet]*LUstarp0[fluxet]+Lambdaplus[fluxet-1][fluxet-1]*LUstarp0[fluxet-1]))/LUstarp0[fluxet];
 
-  Vadd=Vadd/min(min(LUstarp0[fluxet],LUstarp1[fluxet]),min(LUstarp0[fluxet-1],LUstarp1[fluxet-1]));
+  sum=0.0;
+  for (flux=0; flux<fluxet-2; flux++) sum+=Lambdaminus[flux][flux]*LUstarp1[flux];
+  Vadd2=max(0.0,fabs(sum-Lambdaminus[fluxet-2][fluxet-2]*LUstarp1[fluxet-2])-fabs(Lambdaminus[fluxet][fluxet]*LUstarp1[fluxet]+Lambdaminus[fluxet-1][fluxet-1]*LUstarp1[fluxet-1]))/LUstarp1[fluxet];
+
+  Vadd=max(Vadd1,Vadd2);
+
   for (flux=fluxet-1; flux<=fluxet; flux++){
-    Lambdaplus[flux][flux]+=Vadd*0.5/(1.0-zetaA2);
-    Lambdaminus[flux][flux]-=Vadd*0.5/(1.0-zetaA2);
+    Lambdaplus[flux][flux]+=0.5*Vadd;
+    Lambdaminus[flux][flux]-=0.5*Vadd;
   }
-
-
-  
 
 }
 
 
+void condition_Lambda_plus_minus_Parent4(np_t *np, gl_t *gl, long lp0, long theta, jacvars_t jacvarsp0, jacvars_t jacvarsp1, metrics_t metrics,  sqmat_t Lambdaplus, sqmat_t Lambdaminus){
+  long flux;
+  double Vadd1,Vadd2,Vadd,sum;
+  flux_t LUstarp0,LUstarp1;
+
+  condition_Lambda_plus_minus_Pascal(np, gl, lp0, theta, jacvarsp0, jacvarsp1, metrics,  Lambdaplus, Lambdaminus);
+
+  /* make sure the flux is positivity-preserving in multiple dimensions by conditioning the eigenvalues */
+  find_LUstar_from_jacvars(jacvarsp1, metrics, LUstarp1);
+  find_LUstar_from_jacvars(jacvarsp0, metrics, LUstarp0);
+
+  sum=0.0;
+  for (flux=0; flux<fluxet-2; flux++) sum+=Lambdaplus[flux][flux]*LUstarp0[flux];
+  Vadd1=max(0.0,fabs(sum-Lambdaplus[fluxet-2][fluxet-2]*LUstarp0[fluxet-2])-(Lambdaplus[fluxet][fluxet]*LUstarp0[fluxet]+Lambdaplus[fluxet-1][fluxet-1]*LUstarp0[fluxet-1]))/LUstarp0[fluxet];
+
+  sum=0.0;
+  for (flux=0; flux<fluxet-2; flux++) sum+=Lambdaminus[flux][flux]*LUstarp1[flux];
+  Vadd2=max(0.0,fabs(sum-Lambdaminus[fluxet-2][fluxet-2]*LUstarp1[fluxet-2])-fabs(Lambdaminus[fluxet][fluxet]*LUstarp1[fluxet]+Lambdaminus[fluxet-1][fluxet-1]*LUstarp1[fluxet-1]))/LUstarp1[fluxet];
+
+  Vadd=max(Vadd1,Vadd2);
+
+  for (flux=fluxet-1; flux<=fluxet; flux++){
+    Lambdaplus[flux][flux]+=0.5*Vadd;
+    Lambdaminus[flux][flux]-=0.5*Vadd;
+  }
+
+
+}
 
 
 void condition_Lambda_plus_minus_Parent3(np_t *np, gl_t *gl, long lp0, long theta, jacvars_t jacvarsp0, jacvars_t jacvarsp1, metrics_t metrics,  sqmat_t Lambdaplus, sqmat_t Lambdaminus){
